fixing alignment

--- a/static/games/weighinWidget/weighinStyle.css
+++ b/static/games/weighinWidget/weighinStyle.css
@@ -11,7 +11,7 @@
   text-align: center;
   position: absolute;
   bottom: 330px;
-  left: 200px;
+  left: 170px;
   width: 150px;
   height: 50px;
 }
